--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <label for="email">Email:</label>
         <input type="text" id="email" value="new id will come tomorrow" readonly>
         <label for="password">Password:</label>
-        <input type="text" id="password" value="password" readonly>
+        <input type="text" id="password" value="passwordTest" readonly>
         <button onclick="copyToClipboard('email')">Copy Email</button>
         <button onclick="copyToClipboard('password')">Copy Password</button>
     </div>
