--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             color: #fff;
             max-width: 300px; /* Limit the width to fit larger screens */
             padding: 20px;
+             margin-left: -160px; /* Adjust this value to move the fields to the left */
         }
 
         label {
